# auth0-mgmt-api

./: AGENTS.md  BACKLOG.md  Cargo.toml  README.md  flake.nix
src/: client.rs  error.rs  lib.rs
src/api/: clients.rs  connections.rs  logs.rs  mod.rs  users.rs
src/types/: clients.rs  common.rs  connections.rs  enums.rs  ids.rs  logs.rs  mod.rs  query.rs  users.rs
tests/: client_tests.rs  clients_tests.rs  connections_tests.rs  logs_tests.rs  users_tests.rs
